# swappy

./: Cargo.toml  LICENSE  README.md  notes.md
src/: main.rs  swap.rs  win_main.rs
